r16 ====================================================================
* метод GradGen.param_get_grad() переименован в kwargs_get(), т.к.
  1. предназначен для получения параметров любого типа;
  2. предназначен для обработки kwargs из метода init_attrs(), а не
     для получения параметров экземпляра класса, как могло бы показаться
     по старому названию метода
* метод GradGen.param_get_tof() переименован в kwargs_get_tof() по тем
  же соображениям
+ добавлен класс GenRecorderGen (см. описание)

r15 ====================================================================
- исправления в методе SequenceGenGradGen.init_attrs()
- исправления в демонстрационной программе example.py
- исправления в README.md
* изменён класс GradPosition:
  * "константа" DEFAULT_TICK_INTERVAL перенесена из класса GradSender
    в класс GradPosition
  * изменён метод set_length() - кроме числовых значений он теперь
    может получать строку вида ЧЧ:ММ:СС, см. описание метода set_length()
  * метод compute_length() убран, его функциональность перенесена
    в метод set_length()
  - убран метод set_length_from_time() по тем же причинам
  + метод set_direction() и соотв. параметр конструктора может принимать
    кроме положительного/отрицательного числа также булевское значение,
    в этом случае значению False соответствует direction = -1
- исправлена демонстрационная программа example.py

r14 ====================================================================
* изменено поведение функции unwrap_lol():
  + на входе принимает любые типы, списки и кортежи - разворачивает,
    прочие - помещает в возвращаемый список;
  + добавлена опциональная проверка типов: "прочие" проверяются на
    соответствие указанному типу (см. описание функции), в случае
    несоответствия генерируется исключение
+ конструкторам классов, порождённых от GenGradGen, теперь можно передавать
  параметр subgen со списком экземпляров потомков GradGen (как ранее