@@ -1,3 +1,14 @@
+r17 ====================================================================
+- исправлен метод ConstantGradGen.init_attrs() - пытался получить
+  параметр по имени "value" вместо "values"
+- исправления в конструкторе класса GradPosition, из-за которого мог
+  производиться ненужный пересчёт из секунд
+- убрана поддержка неиспользуемого параметра fixrange в конструкторе
+  класса GradSender, т.к. ещё с 11й ревизии передаваемые olad значения
+  принудительно вгоняются в требуемый диапазон в методе __DMX_send_frame()
+- исправлен метод SequenceGenGradGen.get_next_value() - производилась
+  лишняя итерация
+
 r16 ====================================================================
 * метод GradGen.param_get_grad() переименован в kwargs_get(), т.к.
   1. предназначен для получения параметров любого типа;
